--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,12 +1,43 @@
 @import "bootstrap";
 @import url('https://fonts.googleapis.com/css?family=Overpass:300,300i,400,400i,600,600i,700,700i&display=swap');
 
+
+
+.frosty {
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  border-radius: 10px;
+}
+
+.frosty h1 {
+  font-family: 'Overpass', sans-serif;
+  font-weight: 600;
+  text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
+}
+
+.frosty h2 {
+  font-family: 'Overpass', sans-serif;
+  font-weight: 400;
+  text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
+}
+
+.hero {
+  background: image_url('hero.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 370px;
+  box-shadow: 1px 3px 5px black;
+}
+
 .navbar {
   font-family: 'Overpass', sans-serif;
   font-weight: 300;
   border-style: solid;
   border-color: black;
   box-shadow: 1px 3px 5px black;
+  margin: 0;
 }
 
 .navbar a.navbar-brand {
