--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -8,6 +8,21 @@ body {
   font-family: 'Overpass', sans-serif;
 }
 
+.booyah-box {
+  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  box-shadow: 1px 3px 5px black;
+  background: #fff;
+  border: 2px solid #ccc;
+  border-color: black;
+  padding: 10px;
+  margin-top: 15px;
+}
+
+.booyah-box h2, .booyah-box h1 {
+  margin: 10px;
+}
+
 .feature {
   width: 100%;
   padding-left: 5%;
