--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -57,6 +57,14 @@ body {
   box-shadow: 1px 3px 5px black;
 }
 
+.invalid-feedback {
+  color: #ff3333;
+  background-color: rgba(200, 0, 0, 0.20);
+  border-radius: 3px;
+  padding: 2px 8px 2px 8px;
+  margin-bottom: 10px;
+}
+
 .navbar {
   font-family: 'Overpass', sans-serif;
   font-weight: 300;
