--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,9 @@
         <a class="navbar-brand" href="/">Flixter</a>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item">
+              <%= link_to 'See All Courses', courses_path, class: 'nav-link' %>
+            </a>
             <% if user_signed_in? %>
               <a class="nav-item">
                 <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
@@ -31,8 +33,6 @@
                 <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
               </a>
             <% end %>
-            <a class="nav-item nav-link" href="#">Pricing</a>
-            <a class="nav-item nav-link disabled" href="#">Disabled</a>
           </div>
         </div>
       </nav>
