--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -69,6 +69,12 @@ body {
   margin-bottom: 10px;
 }
 
+.img-fluid {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .navbar {
   font-family: 'Overpass', sans-serif;
   font-weight: 300;
