--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -58,7 +58,7 @@
                 <%= link_to lesson_path(lesson) do %>
                   <b><%= lesson.title %></b>
                   <br/>
-                  <% lesson.subtitle %>
+                  <b><%= lesson.subtitle %></b>
                 <% end %>
               </div>
             </div>
