--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "font-awesome";
 @import url('https://fonts.googleapis.com/css?family=Overpass:300,300i,400,400i,600,600i,700,700i&display=swap');
 
 
@@ -6,6 +7,18 @@
 body {
   background: image_url('bg.png');
   font-family: 'Overpass', sans-serif;
+}
+
+ul {
+  list-style-type: none;
+}
+
+ul .header {
+  font-size: 25px;
+}
+
+ul .header .fa {
+  font-size: 20px;
 }
 
 .booyah-box {
@@ -81,6 +94,24 @@ body {
   height: 130px;
 }
 
+.lessons li {
+  background: black;
+  color: white;
+  margin: 10px;
+  padding: 8px;
+  font-size: 15px;
+  border-radius: 2px;
+}
+
+.lessons li b {
+  font-size: 25px;
+  font-weight: 100;
+}
+
+.lessons li p {
+  margin: 0;
+}
+
 .lesson a {
   color: white;
   font-size: 15px;
@@ -110,4 +141,12 @@ body {
   border: 1px solid;
   box-shadow: 1px 3px 5px black;
   padding: 20px;
+  border-radius: 2px;
+}
+
+.section-li {
+  border: 1px solid;
+  box-shadow: 1px 3px 5px black;
+  padding: 20px;
+  margin: 20px;
 }
