Bug fixes for routing errors

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <link href="http://vjs.zencdn.net/5.12.6/video-js.css" rel="stylesheet">
+    <link href="https://vjs.zencdn.net/5.12.6/video-js.css" rel="stylesheet">
   </head>
 
   <body>
@@ -65,11 +65,11 @@
           <div class="col-12 col-sm-3">
             <b>About</b>
             <br />
-            <%= link_to 'Team', 'about_path' %>
+            <%= link_to 'Team', about_path %>
             <br />
-            <%= link_to 'Careers', 'career_path' %>
+            <%= link_to 'Careers', career_path %>
             <br />
-            <%= link_to 'Privacy Policy', 'privacy_path' %>
+            <%= link_to 'Privacy Policy', privacy_path %>
           </div>
           <div class="col-12 col-sm-3">
             <b>Contact</b>
@@ -94,8 +94,8 @@
       </div>
     </div>
 
-    <script src="http://vjs.zencdn.net/5.12.6/video.js"></script>
-    <script src="http://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
+    <script src="https://vjs.zencdn.net/5.12.6/video.js"></script>
+    <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
     
   </body>
 </html>
